Added touches to Protosite

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
   [headers.values]
     Cross-Origin-Embedder-Policy = "require-corp"
     Cross-Origin-Opener-Policy = "same-origin"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
